feat: client work with account, text, cards data
